added parcel bundler

--- a/views/viewprofile.pug
+++ b/views/viewprofile.pug
@@ -24,7 +24,7 @@
         </div>
         <p class="question">Haven't taken any quiz yet?</p>
         //- <button class="loginBtn profileTestBtn">Start the Test &rarr;</button>
-        <a class="loginBtn profileTestBtn" href="/qanda">Start the Test &rarr;</a>
+        <a class="loginBtn profileTestBtn profile_link" href="/qanda">Start the Test &rarr;</a>
         <a href="/" class="gotohomePageLink profile_gotohome">&larr; Go To Home Page</a>
         </div>
     </div>
