--- a/views/home.pug
+++ b/views/home.pug
@@ -24,5 +24,6 @@
             <a class="container__startTestBtn startTestlink" href="/qanda">Start The Test &rarr;</a>
         </div>
     </div>
+    script(src="js/bundle.js")
 </body>
 </html>
