--- a/templates/sass/components/_button.scss
+++ b/templates/sass/components/_button.scss
@@ -1,20 +1,4 @@
-.container{
-  &__startTestBtn{
-    font-size:1.6rem;
-    border:none;
-    color:$color-grey-primary;
-    font-weight: 600;
-    padding:1rem 2rem;
-    border-radius:50px;
-    transition:all .3s;
-    outline:none;
-    &:hover,
-    &:active{
-      transform: scaleX(1.05);
-      
-    } 
-  }
-}
+
 
 .loginBtn{
   border:none;
@@ -62,6 +46,28 @@
   }
 }
 
+.startTestlink{
+     font-size:1.6rem;
+     border:1px solid transparent;
+     background-color: $color-white-primary;
+     color:$color-grey-primary;
+     font-weight: 600;
+     padding:1rem 2rem;
+     border-radius:50px;
+     transition:all .3s;
+     text-decoration:none;
+     &:hover,
+     &:active{
+       transform: scaleX(1.05);
+      
+     } 
+    
+}
+
+.profile_link{
+  text-decoration:none;
+
+}
 
 
 // &__radio-group {
