--- a/views/home.pug
+++ b/views/home.pug
@@ -21,8 +21,9 @@
         <div class="container"> 
             <h1 class="container__heading">QUIZ MANAGEMENT SYSTEM</h1>
             //- <button class="container__startTestBtn">Start The Test &rarr;</button>
-            <a class="container__startTestBtn" href="/qanda">Start The Test &rarr;</a>
+            <a class="container__startTestBtn startTestlink" href="/qanda">Start The Test &rarr;</a>
         </div>
     </div>
+    script(src="js/bundle.js")
 </body>
 </html>
