--- a/templates/sass/main.css
+++ b/templates/sass/main.css
@@ -110,12 +110,29 @@ body {
 }
 
 .login_form--input:focus {
-  outline: none;
-  border-bottom: 3px solid #57BA98;
+  outline: 0;
 }
 
 .login_form--input::-webkit-input-placeholder {
   color: rgba(58, 78, 85, 0.8);
+}
+
+.input small {
+  font-size: 1.2rem;
+  color: red;
+  display: none;
+}
+
+input.success {
+  border-bottom: 3px solid #65CCBB;
+}
+
+input.error {
+  border-bottom: 3px solid red;
+}
+
+.input.error small {
+  display: block;
 }
 
 .profile_heading {
@@ -191,23 +208,6 @@ body {
           transform: scaleX(1.05);
 }
 
-.container__startTestBtn {
-  font-size: 1.6rem;
-  border: none;
-  color: #18262B;
-  font-weight: 600;
-  padding: 1rem 2rem;
-  border-radius: 50px;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-  outline: none;
-}
-
-.container__startTestBtn:hover, .container__startTestBtn:active {
-  -webkit-transform: scaleX(1.05);
-          transform: scaleX(1.05);
-}
-
 .loginBtn {
   border: none;
   padding: 1rem 2rem;
@@ -261,6 +261,28 @@ body {
 
 .buttons_submit {
   grid-column: 1/span2;
+}
+
+.startTestlink {
+  font-size: 1.6rem;
+  border: 1px solid transparent;
+  background-color: #F2F2F2;
+  color: #18262B;
+  font-weight: 600;
+  padding: 1rem 2rem;
+  border-radius: 50px;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  text-decoration: none;
+}
+
+.startTestlink:hover, .startTestlink:active {
+  -webkit-transform: scaleX(1.05);
+          transform: scaleX(1.05);
+}
+
+.profile_link {
+  text-decoration: none;
 }
 
 .body {
