--- a/views/login.pug
+++ b/views/login.pug
@@ -16,14 +16,18 @@
                 p Login
             </h1>
             <form class=" login_form">
-                <div class=" input name_input">
+                <div class=" input name_input ">
                     <label for="email" class="login_form--label">Email-id </label>
                     <input type="email" class="login_form--input" placeholder="Email" id="email" required>
+                    <small>Error Message</small>
                 </div>
                 <div class=" input password_input">
                     <label for="password" class="login_form--label">Password</label> 
                     <input type="password" class="login_form--input" placeholder="Password" id="password" required>
+                    <small>Error Message</small>
+
                 </div>
+
                 <button class="input loginBtn">Login</button>
                 <a href="/" class="gotohomePageLink">&larr; Go To Home Page</a>
             </form> 
