--- a/views/signup.pug
+++ b/views/signup.pug
@@ -14,31 +14,39 @@
             <h1 class="login_heading">
                 p SignUp
             </h1>
-            <form class=" login_form">
+            <form id ="form" class=" login_form">
                 <div class="input">
                     <label for="name" class="login_form--label">Name </label>
-                    <input type="name" class="login_form--input" placeholder="Name" id="name" required>
+                    <input type="name" class="login_form--input name" placeholder="Name" id="name" required>
+                    <small class="small_name">Error message</small>
                 </div>
                 <div class=" input">
                     <label for="email" class="login_form--label">Email-id </label>
-                    <input type="email" class="login_form--input" placeholder="Email" id="email" required>
+                    <input type="email" class="login_form--input email" placeholder="Email" id="email" required>
+                    <small class="small_email">Error message</small>
+
                 </div>
                 <div class=" input">
                     <label for="password" class="login_form--label">Password</label> 
-                    <input type="password" class="login_form--input" placeholder="Password" id="password" required>
+                    <input type="password" class="login_form--input password" placeholder="Password" id="password" required>
+                    <small class="small_password">Error message</small>
+
                 </div>
                 <div class=" input">
                     <label for="confirm_password" class="login_form--label">Confirm Password</label> 
-                    <input type="password" class="login_form--input" placeholder="ConfirmPassword" id="confirm_password" required>
+                    <input type="password" class="login_form--input confirmPassword" placeholder="ConfirmPassword" id="confirm_password" required>
+                    <small class="small_confirmpassword">Error message</small>
+
                 </div>
                 <div class="input">
                     <label for="photo" class="login_form--label">Upload photo</label> 
-                    <input type="file" placeholder="photo" id="photo" required>
+                    <input type="file" placeholder="photo" id="photo" >
                 </div>
-                <button class="input loginBtn">SignUp</button>
+                <button type="submit" class="input loginBtn signUpBtn">SignUp</button>
                 <a href="/" class="gotohomePageLink">&larr; Go To Home Page</a>
             </form> 
         </div>
     </div>
+    <script src="js/bundle.js"></script>
 </body>
-</html>
+</html> 
