--- a/views/signup.pug
+++ b/views/signup.pug
@@ -14,7 +14,7 @@
             <h1 class="login_heading">
                 p SignUp
             </h1>
-            <form id ="form" class=" login_form">
+            <form id ="form" class=" login_form signup_form">
                 <div class="input">
                     <label for="name" class="login_form--label">Name </label>
                     <input type="name" class="login_form--input name" placeholder="Name" id="name" required>
@@ -37,7 +37,7 @@
                     <input type="password" class="login_form--input confirmPassword" placeholder="ConfirmPassword" id="confirm_password" required>
                     <small class="small_confirmpassword">Error message</small>
 
-                </div>
+                </div> 
                 <div class="input">
                     <label for="photo" class="login_form--label">Upload photo</label> 
                     <input type="file" placeholder="photo" id="photo" >
