--- a/views/home.pug
+++ b/views/home.pug
@@ -11,12 +11,20 @@
 <body>
     <div class="body">
         <header class="header">
-            <a href="/profile"class="header_admin">View Profile</a>
-            <div class="header_navigation">
-                <li class="header_navigation__list"><a href="/" class="header_navigation__link">Home</a></li>
-                <li class="header_navigation__list"><a href="/login" class="header_navigation__link">Login</a></li>
-                <li class="header_navigation__list"><a href="/signup" class="header_navigation__link">SignUp</a></li>
-            </div>
+            -if(user)
+                <a href="/profile"class="header_admin">View Profile</a>
+                <div class="header_navigation">
+                    //- <li class="header_navigation__list"><a href="/" class="header_navigation__link">Home</a></li>
+                    //- <li class="header_navigation__list"><a href="/login" class="header_navigation__link">Login</a></li>
+                    <li class="header_navigation__list"><a href="#" class="header_navigation__link">Logout</a></li>
+                </div>
+            -else
+                <a href="/login"class="header_admin">Test results</a>
+                <div class="header_navigation">
+                    <li class="header_navigation__list"><a href="/" class="header_navigation__link">Home</a></li>
+                    <li class="header_navigation__list"><a href="/login" class="header_navigation__link">Login</a></li>
+                    <li class="header_navigation__list"><a href="/signup" class="header_navigation__link">SignUp</a></li>
+                </div>
         </header>
         <div class="container"> 
             <h1 class="container__heading">QUIZ MANAGEMENT SYSTEM</h1>
