added photo and logout

--- a/views/home.pug
+++ b/views/home.pug
@@ -16,9 +16,9 @@
                 <div class="header_navigation">
                     //- <li class="header_navigation__list"><a href="/" class="header_navigation__link">Home</a></li>
                     //- <li class="header_navigation__list"><a href="/login" class="header_navigation__link">Login</a></li>
-                    <li class="header_navigation__list"><a href="#" class="header_navigation__link">Logout</a></li>
+                    <li class="header_navigation__list"><a href="#" class="header_navigation__link logoutbtn">Logout</a></li>
                 </div>
-            -else
+            -else 
                 <a href="/login"class="header_admin">Test results</a>
                 <div class="header_navigation">
                     <li class="header_navigation__list"><a href="/" class="header_navigation__link">Home</a></li>
