--- a/views/viewprofile.pug
+++ b/views/viewprofile.pug
@@ -15,7 +15,11 @@
                 p Profile
             </h1>
             <div class="profile_photo">
-                <img src="images/profile.jpg" alt="profile" class="profile_image">
+                //- <img src="images/profile.jpg" alt="profile" class="profile_image">
+                -if(user.photo==='default')
+                    img(src=`/images/users/${user.photo}.jpg` alt="profile" class="profile_image")
+                -else
+                    img(src=`/images/users/${user.photo}` alt="profile" class="profile_image")
             </div> 
         <div class="profile_details">
                 <span class="profile_name">Name: John Doe</span>
