--- a/views/viewprofile.pug
+++ b/views/viewprofile.pug
@@ -22,8 +22,8 @@
                     img(src=`/images/users/${user.photo}` alt="profile" class="profile_image")
             </div> 
         <div class="profile_details">
-                <span class="profile_name">Name: John Doe</span>
-                <span class="profile_mail">Email: johndoe@gmail.com</span>
+                <span class="profile_name">Name: #{user.name}</span>
+                <span class="profile_mail">Email: #{user.email}</span>
                 <span class="testmarks">Marks: 10/10</span>
         </div>
         <p class="question">Haven't taken any quiz yet?</p>
