--- a/views/viewprofile.pug
+++ b/views/viewprofile.pug
@@ -21,16 +21,18 @@
                 -else
                     img(src=`/images/users/${user.photo}` alt="profile" class="profile_image")
             </div> 
-        <div class="profile_details">
-                <span class="profile_name">Name: #{user.name}</span>
-                <span class="profile_mail">Email: #{user.email}</span>
-                <span class="testmarks">Marks: 10/10</span>
-        </div>
-        <p class="question">Haven't taken any quiz yet?</p>
-        //- <button class="loginBtn profileTestBtn">Start the Test &rarr;</button>
-        <a class="loginBtn profileTestBtn profile_link" href="/qanda">Start the Test &rarr;</a>
-        <a href="/" class="gotohomePageLink profile_gotohome">&larr; Go To Home Page</a>
+            <div class="profile_details">
+                    <span class="profile_name">Name: #{user.name}</span>
+                    <span class="profile_mail">Email: #{user.email}</span>
+                    <span class="testmarks">Marks: 10/10</span>
+            </div>
+            <p class="question">Haven't taken any quiz yet?</p>
+            //- <button class="loginBtn profileTestBtn">Start the Test &rarr;</button>
+            <a class="loginBtn profileTestBtn profile_link" href="/qanda">Start the Test &rarr;</a>
+            <a href="/" class="gotohomePageLink profile_gotohome">&larr; Go To Home Page</a>
         </div>
     </div>
+
+    <script src="js/bundle.js"></script>
 </body>
 </html>
