--- a/templates/sass/layout/_viewProfile.scss
+++ b/templates/sass/layout/_viewProfile.scss
@@ -1,6 +1,6 @@
 .profile{
 &_body{
-    height:100vh;
+   height:100vh;
 }
 
 &_container{
@@ -13,7 +13,7 @@
     left:50%;
     transform:translate(-50%,-50%);
     grid-template-columns:1fr;
-    grid-template-rows:1fr 1fr 1rem 1fr 1fr 1rem 1fr 4rem;
+    grid-template-rows:1fr 1fr 1rem 1fr 1fr min-content 1fr 4rem;
 }
 
 &_details{
