--- a/views/viewprofile.pug
+++ b/views/viewprofile.pug
@@ -26,7 +26,10 @@
                     <span class="profile_mail">Email: #{user.email}</span>
                     <span class="testmarks">Marks: 10/10</span>
             </div>
-            <p class="question">Haven't taken any quiz yet?</p>
+            <div class="question_container question"> 
+                //- p Haven't taken any quiz yet?
+            </div>
+            //-  <p class="question">Haven't taken any quiz yet?</p>
             //- <button class="loginBtn profileTestBtn">Start the Test &rarr;</button>
             <a class="loginBtn profileTestBtn profile_link" href="/qanda">Start the Test &rarr;</a>
             <a href="/" class="gotohomePageLink profile_gotohome">&larr; Go To Home Page</a>
