--- a/views/QandA.pug
+++ b/views/QandA.pug
@@ -11,86 +11,88 @@
 <body>
     <div class="qa_container">
         <h1 class="login_heading">Quiz</h1>
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion1" value="1"> the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion1" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion1" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion1" value="4">  none of the mentioned</div>
+        <div class ="qa_body">
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion1" value="1"> the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion1" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion1" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion1" value="4">  none of the mentioned</div>
+        //- </div>
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion2" value="1">  the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion2" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion2" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion2" value="4">  none of the mentioned</div>
+        //- </div>        
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion3" value="1">  the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion3" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion3" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion3" value="4">  none of the mentioned</div>
+        //- </div>     
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion4" value="1">  the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion4" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion4" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion4" value="4">  none of the mentioned</div>
+        //- </div>     
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion5" value="1">  the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion5" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion5" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion5" value="4">  none of the mentioned</div>
+        //- </div>     
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion6" value="1">  the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion6" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion6" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion6" value="4">  none of the mentioned</div>
+        //- </div>    
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion7" value="1">  the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion7" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion7" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion7" value="4">  none of the mentioned</div>
+        //- </div>    
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion8" value="1">  the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion8" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion8" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion8" value="4">  none of the mentioned</div>
+        //- </div>    
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion9" value="1">  the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion9" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion9" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion9" value="4">  none of the mentioned</div>
+        //- </div>    
+        //- <div class="qa_box">
+        //-     <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
+        //-     </span>
+        //-     <div class="qa_box--option-1"><input type="radio" name="quesion10" value="1">  the amount of available physical memory</div>
+        //-     <div class="qa_box--option-2"><input type="radio" name="quesion10" value="2">  operating System</div>
+        //-     <div class="qa_box--option-3"><input type="radio" name="quesion10" value="3">  instruction set architecture</div>
+        //-     <div class="qa_box--option-4"><input type="radio" name="quesion10" value="4">  none of the mentioned</div>
+        //- </div>  
         </div>
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion2" value="1">  the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion2" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion2" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion2" value="4">  none of the mentioned</div>
-        </div>        
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion3" value="1">  the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion3" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion3" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion3" value="4">  none of the mentioned</div>
-        </div>     
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion4" value="1">  the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion4" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion4" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion4" value="4">  none of the mentioned</div>
-        </div>     
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion5" value="1">  the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion5" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion5" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion5" value="4">  none of the mentioned</div>
-        </div>     
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion6" value="1">  the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion6" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion6" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion6" value="4">  none of the mentioned</div>
-        </div>    
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion7" value="1">  the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion7" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion7" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion7" value="4">  none of the mentioned</div>
-        </div>    
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion8" value="1">  the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion8" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion8" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion8" value="4">  none of the mentioned</div>
-        </div>    
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion9" value="1">  the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion9" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion9" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion9" value="4">  none of the mentioned</div>
-        </div>    
-        <div class="qa_box">
-            <span class="qa_box--question">1. The minimum number of frames to be allocated to a process is decided by the ____________
-            </span>
-            <div class="qa_box--option-1"><input type="radio" name="quesion10" value="1">  the amount of available physical memory</div>
-            <div class="qa_box--option-2"><input type="radio" name="quesion10" value="2">  operating System</div>
-            <div class="qa_box--option-3"><input type="radio" name="quesion10" value="3">  instruction set architecture</div>
-            <div class="qa_box--option-4"><input type="radio" name="quesion10" value="4">  none of the mentioned</div>
-        </div>  
         <div class="buttons">
             <button class="buttons_paginationBtn">page-1</button>
             <button class="buttons_paginationBtn">page-1</button>
@@ -98,4 +100,7 @@
         </div>
         <a href="/" class="qa_box gotohomePageLink">&larr; Go To Home Page</a>
     </div>
+        <script src="js/bundle.js"></script>
+
 </body>
+</html>
