--- a/views/QandA.pug
+++ b/views/QandA.pug
@@ -94,10 +94,12 @@
         //- </div>  
         </div>
         <div class="buttons">
-            <button class="buttons_paginationBtn">page-1</button>
-            <button class="buttons_paginationBtn">page-1</button>
-            <button class="buttons_submit loginBtn">Submit</button>
+            //- <button class="buttons_paginationBtn">page-1</button>
+            //- <button class="buttons_paginationBtn">page-1</button>
+            //- <button class="buttons_submit loginBtn">Submit</button>
         </div>
+
+        <button class="buttons_submit loginBtn submit_data">Submit</button>
         <a href="/" class="qa_box gotohomePageLink">&larr; Go To Home Page</a>
     </div>
         <script src="js/bundle.js"></script>
