--- a/templates/sass/layout/_homePage.scss
+++ b/templates/sass/layout/_homePage.scss
@@ -5,21 +5,38 @@
     display:flex;
     justify-content: space-between;
     padding:2rem 1rem;
+
+    @media all and(max-width:415px){
+      display:block;
+      padding:1rem 0rem;
+     
+    }
 }
 
 .container{
   display:grid;
   grid-template-rows: repeat(2,1fr);
-  grid-template-columns:repeat(1,min-content(100px,1fr));
+  // grid-template-columns:repeat(5,min-content(100px,1fr));
+   grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+
   &__heading{
-    grid-column:span 1;
+    grid-column:1/6;
     justify-self: center;
     align-self: center;
+    @media all and(max-width:415px){
+        grid-column:5/span 1;
+    }
+    
   }
+
   &__startTestBtn{
     grid-row:2/3;
-    grid-column:span 1;
+    grid-column:1/span 5;
     justify-self: center;
     align-self:start;
+    @media all and(max-width:415px){
+      grid-column:5/span 1;
+      align-self:center;
+  }
   }
 }
