--- a/templates/sass/pages/_home.scss
+++ b/templates/sass/pages/_home.scss
@@ -2,6 +2,13 @@
 
 .header{
     background-color:$color-grey-primary;
+
+    @media all and(max-width:415px){
+      position:fixed;
+      width:150px;
+      height:100%;
+      
+    }
 }
 
 //container section for home page
