--- a/templates/sass/main.css
+++ b/templates/sass/main.css
@@ -585,4 +585,12 @@ body {
   border-radius: 15px;
   overflow: hidden;
 }
+
+.checklogin {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
 /*# sourceMappingURL=main.css.map */
