--- a/templates/sass/pages/_home.scss
+++ b/templates/sass/pages/_home.scss
@@ -52,3 +52,10 @@
   border-radius:15px;
       overflow:hidden;
 }
+.checklogin
+{
+  position: absolute;
+  left:50%;
+  top:50%;
+  transform: translate(-50%,-50%);
+}
