--- a/views/home.pug
+++ b/views/home.pug
@@ -29,7 +29,11 @@
         <div class="container"> 
             <h1 class="container__heading">QUIZ MANAGEMENT SYSTEM</h1>
             //- <button class="container__startTestBtn">Start The Test &rarr;</button>
-            <a class="container__startTestBtn startTestlink" href="/qanda">Start The Test &rarr;</a>
+            .checklogin
+                -if(user)
+                    <a class="container__startTestBtn startTestlink" href="/qanda">Start The Test &rarr;</a>
+                -else
+                    <a class="container__startTestBtn startTestlink" href="/login">Start The Test &rarr;</a>
         </div>
     </div>
     script(src="js/bundle.js")
